# django-material-admin

./: .gitignore  MANIFEST.in  README.md  generar.sh  pyproject.toml  setup.py
material/admin/: apps.py  options.py  sites.py
material/templates/admin/: change_form.html  change_list.html
material/templates/admin/widgets/: clearable_file_input.html
package/: setup.py
