[tool.poetry]
name = "material"
version = "1.0.1"
description = ""
authors = ["jp <jmartinez@clk.com.uy>"]

[tool.poetry.dependencies]
python = "^3.9"
django-daterangefilter = "^1.0.0"
django-admin-sortable2 = "^2.1.3"
Django = "4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
